Update license Makefile

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,3 +1,18 @@
+#################################################################################
+# Software Name : LatSeq
+# Version: 1.0
+# SPDX-FileCopyrightText: Copyright (c) 2020-2021 Orange Labs
+# SPDX-License-Identifier: BSD-3-Clause
+#
+# This software is distributed under the BSD 3-clause,
+# the text of which is available at https://opensource.org/licenses/BSD-3-Clause
+# or see the "license.txt" file for more details.
+#
+# Author: Flavien Ronteix--Jacquet
+# Software description: tests makefile
+#################################################################################
+
+
 TEST_DIR	= $(shell pwd)
 OPENAIR_DIR 	= $(TEST_DIR)/../../..
 OPENAIR2_COMMON = $(OPENAIR_DIR)/openair2/COMMON
