gitignore the data_experiments directory

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,c
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,c
 
+### directories to ignore ###
+data_experiments/
+
 ### C ###
 # Prerequisites
 *.d
